Chat Redesign: avoid timestamp float overlapping by clearing floats after the message block

--- a/www/resources/chat.css
+++ b/www/resources/chat.css
@@ -128,6 +128,22 @@
     /* font-size: 65%; */
 }
 
+#xowiki-chat-messages .xowiki-chat-message-block:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+
+#xowiki-chat-messages .xowiki-chat-message-block-me:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+
 /* Send form */
 #xowiki-chat-messages-form-block {
     margin-left: 20px;
